Wrap white space in hero section to prevent text overflowing

--- a/style.css
+++ b/style.css
@@ -86,8 +86,8 @@ section > button:last-child {
     border: 1px solid rgb(123, 131, 179);
     background-color: #0000;
 }
+
 .hero {
-    white-space: nowrap;
     flex-direction: row !important;
     align-items: center;
     justify-content: space-around;
